--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://spongiek.github.io/Portfolio",
-  "name": "portfolio2",
+  "homepage": "http://ktonner.github.io/Portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
