--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.1",
+    "express": "^4.17.1",
     "framer-motion": "^2.3.0",
     "npm-watch": "^0.6.0",
     "react": "^16.13.1",
