--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "bootstrap": "^4.5.1",
     "express": "^4.17.1",
     "framer-motion": "^2.3.0",
-    "npm-watch": "^0.6.0",
+    "npm-watch": "^0.11.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "watch": {
     "build": {
